Fix section metadata items not being wrapped

--- a/src/less/Section.less
+++ b/src/less/Section.less
@@ -149,6 +149,7 @@ ol .cd-section-button {
 
 .cd-section-metadata {
   display: flex;
+  flex-wrap: wrap;
 
   &-authorsPopup {
     font-size: 0.8125rem;
